<resources>
    <!-- FACEBOOK -->
    <string name="facebook_app_id">284051375458273</string> <string name="fb_login_protocol_scheme">fb284051375458273</string>


    <!-- TELAS -->

    <!-- TELA DE LOGIN -->
    <string name="label_usuario">Usuário</string>
    <string name="label_senha">Senha</string>
    <string name="placeholder_usuario">Digíte seu usuário</string>
    <string name="placeholder_senha">Digíte sua senha</string>
    <string name="btn_logar">Logar</string>
    <string name="btn_logar_google">Google</string>
    <string name="btn_logar_facebook">Facebook</string>
    <string name="btn_abrir_cadastro_usuario">Efetuar cadastro</string>

    <!--  TELA DE USUARIO    -->
    <string name="label_nome_usuario">Nome</string>
    <string name="label_user_name">Login</string>
    <string name="label_email_usuario">E-mail</string>
    <string name="label_senha_usuario">Senha</string>
    <string name="placeholder_nome_usuario">Digíte seu nome</string>
    <string name="placeholder_user_name">Login deve ser no mínimo de 3 letras</string>
    <string name="placeholder_email_usuario">Digíte seu e-mail</string>
    <string name="placeholder_senha_usuario">Senha mínima de 3 letras e/ou números</string>
    <string name="texto_botao_salvar_usuario">Salvar Usuário</string>

    <!--  TELA DE CADASTRO    -->
    <string name="label_categoria">Categoria</string>
    <string name="label_descricao">Descrição</string>
    <string name="label_valor">Valor</string>
    <string name="label_data">Data</string>
    <string name="txt_pesquisa_mapa">Dígite o endereço</string>

    <!-- TELA DE SALDO -->
    <string name="label_lancamentos_credito">Lançamentos de Créditos</string>
    <string name="label_lancamentos_despesas">Lançamentos de Despesas</string>

    <!-- TELA DE CATEGORIA -->
    <string name="titulo_janela_categoria">Cadastro de Categoria</string>
    <string name="placeholder_nova_categoria">Nova Categoria</string>


    <!-- TITULOS -->
    <string name="app_name">See Cash</string>
    <string name="title_movimento">Movimentos</string>
    <string name="title_saldo">Saldo</string>
    <string name="title_extrato">Extrato</string>
    <string name="title_configuracao">Configuração</string>
    <string name="title_cadastro">Cadastro</string>
    <string name="title_editar">Editar</string>
    <string name="title_alertas">Alertas</string>
    <string name="title_cadastro_usuario">Cadastro de Usuário</string>

    <!-- MENU TOOLBAR -->
    <string name="menu_notificacao">Alertas</string>
    <string name="menu_usuario">Cadastro de Usuários</string>
    <string name="menu_categoria">Cadastro de Categorias</string>
    <string name="menu_sair">Sair</string>

    <!-- MENU CADASTRO -->
    <string name="menu_salvar">Salvar</string>
    <string name="menu_excluir">Excluir</string>

    <!-- MENSAGENS -->
    <string name="msg_excluir_operacao">Deseja excluir o registro</string>
    <string name="msg_notificacao">Notificação</string>

    <!-- RADIO BUTTONS -->
    <string name="msg_texto_alerta">Me notifique quando a condição for:</string>
    <string name="label_valor_alerta">Valor</string>
    <string name="placeholder_valor_alerta">Valor da condição</string>
    <string name="tipo_credito">Crédito</string>
    <string name="tipo_despesa">Despesa</string>
    <string name="condicao_saldo">Saldo</string>
    <string name="condicao_maior">Maior que</string>
    <string name="condicao_menor">Menor que</string>


    <!-- CARD VIEW-->
    <string name="card_titulo_bitcoin">Bitcoin</string>
    <string name="card_titulo_dolar">Dolar</string>
    <string name="card_titulo_euro">Euro</string>

    <!-- MENU TABS -->
    <string name="tab_home">Movimentos</string>
    <string name="tab_saldo">Saldo</string>
    <string name="tab_extrato">Extrato</string>
    <string name="tab_cotacao">Cotações</string>
    <string name="tab_configuracao">Configuração</string>

    <string name="title_activity_main2">See Cash</string>
    <string name="titulo_cadastro">Cadastro</string>
    <string name="search">Pesquisar</string>
    <string name="title_activity_login">Login</string>
    <string name="txt_criar_conta">Criar Conta</string>
    <string name="txt_recuperar_senha">Recuperar Senha</string>


    <!-- Strings related to login -->
    <string name="username">Usuário</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Entrar</string>
    <string name="action_sign_in_short">Entrar</string>
    <string name="error_invalid_username">Nome de usuário muuito curto</string>
    <string name="error_invalid_password">Senha muito curta</string>
    <string name="error_incorrect_password">Senha incorreta</string>
    <string name="error_field_required">Campo obrigatório</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btnExcluir">Exclui</string>
</resources>
