<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

        <item
            android:id="@+id/btn_salvar"
            android:icon="@drawable/ic_content_save_all"
            android:onClick="salvarOperacao"
            android:title="@string/menu_salvar"
            app:showAsAction="always" />

        <item
            android:id="@+id/btn_excluir"
            android:icon="@drawable/ic_delete_forever"
            android:onClick="excluiOperacao"
            android:title="@string/menu_excluir"
            app:showAsAction="always" />


    <item
        android:id="@+id/item_categoria_sair"
        android:icon="@drawable/ic_twotone_menu_24px"
        android:title=""
        app:showAsAction="always">

        <menu>

             <item
                android:id="@+id/btn_cadastro_categoria"
                android:icon="@drawable/ic_shape_plus"
                android:title="@string/menu_categoria"
                app:showAsAction="withText" />

            <item
                android:id="@+id/btn_sair"
                android:title="@string/menu_sair"
                app:icon="@drawable/ic_close_circle_outline"
                app:showAsAction="withText" />
        </menu>

    </item>



</menu>