<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:theme="@style/AppTheme.NoActionBar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B4EEB4"
    android:label="@string/title_cadastro_usuario"
    android:orientation="vertical"
    tools:context=".CadastroDeUsuarioActivity">


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbarCadastroUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@color/colorPrimary"
        android:elevation="4dp"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_nome_usuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/label_nome_usuario">

        <EditText
            android:id="@+id/txt_nome_usuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords|textCapSentences|textPersonName"
            android:paddingLeft="5dp"
            android:textAllCaps="true"
            android:textSize="14sp" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:hint="@string/label_user_name">

        <EditText
            android:id="@+id/txt_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/placeholder_user_name"
            android:inputType="textCapWords|textCapSentences|textPersonName"
            android:paddingLeft="5dp"
            android:textSize="14sp" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:hint="@string/label_email_usuario">

        <EditText
            android:id="@+id/txt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:paddingLeft="5dp"
            android:textSize="14sp" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_senha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:hint="@string/label_senha_usuario"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/colorPrimary">

        <EditText
            android:id="@+id/txt_senha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/placeholder_senha_usuario"
            android:inputType="textPassword"
            android:paddingLeft="5dp"
            android:textSize="14sp" />

    </android.support.design.widget.TextInputLayout>

    <View
        android:id="@+id/separadorData"
        android:layout_width="wrap_content"
        android:layout_height="1dp" />

    <Button
        android:id="@+id/btn_gravar_usuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@color/btnLogin"
        android:onClick="salvarUsuario"
        android:text="@string/texto_botao_salvar_usuario"
        android:textColor="#fff"
        android:textSize="14sp"
        tools:layout_editor_absoluteX="139dp"
        tools:layout_editor_absoluteY="259dp" />


</LinearLayout>