<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/lbl_cadastro_alertas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/msg_texto_alerta"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#000"
        android:textSize="14sp" />

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/radiogroup_tipo_operacao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lbl_cadastro_alertas"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:padding="5dp">

        <RadioButton
            android:id="@+id/radio_saldo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:paddingRight="5dp"
            android:text="@string/condicao_saldo"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/radio_tipo_operacao_credito"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:onClick="onRadioButtonClicked"
            android:paddingRight="5dp"
            android:text="@string/tipo_credito"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/radio_tipo_operacao_despesa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:paddingRight="5dp"
            android:text="@string/tipo_despesa"
            android:textSize="12sp" />
    </RadioGroup>

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/radiogroup_condicao_alerta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/radiogroup_tipo_operacao"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        android:padding="5dp">

        <RadioButton
            android:id="@+id/radio_condicao_maior"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:paddingRight="5dp"
            android:text="@string/condicao_maior" />

        <RadioButton
            android:id="@+id/radio_condicao_menor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="63dp"
            android:paddingRight="5dp"
            android:text="@string/condicao_menor" />
    </RadioGroup>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/txt_input_layout_cadastro_alerta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radiogroup_condicao_alerta"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">

        <EditText
            android:id="@+id/txt_valor_alerta"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/txt_input_layout_cadastro_alerta"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/placeholder_valor_alerta"
            android:inputType="numberDecimal"
            android:paddingLeft="10dp"
            android:textColorLink="@color/btnLogin"
            android:textSize="14sp" />

    </android.support.design.widget.TextInputLayout>


    <LinearLayout
        android:id="@+id/linearlayout_botao_cadastro_alerta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_input_layout_cadastro_alerta"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="2dp"
        android:background="#fff"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_confirmar_alerta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/btnLogin"
            android:text="Salvar"
            android:onClick="salvaAlerta"
            android:textColor="#fff" />

        <Button
            android:id="@+id/btn_cancelar_alerta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#fff"
            android:text="Sair"
            android:visibility="gone" />

        <Button
            android:id="@+id/btn_excluir_alerta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/btnExcluir"
            android:text="Excluir" />


    </LinearLayout>

</RelativeLayout>